privetnet/k8s/web/ingress.yaml
# https://cloud.google.com/kubernetes-engine/docs/concepts/ingress
# https://cloud.google.com/kubernetes-engine/docs/concepts/ingress-xlb
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "wordpress"
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: "wordpress"
    # reference the FrontendConfig for HTTP -> HTTPS redirect
    networking.gke.io/v1beta1.FrontendConfig: "wordpress"
spec:
  defaultBackend:
    service:
      name: wordpress
      port:
        number: 80
  rules:
  - http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: wordpress
            port:
              number: 80
